--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
-.App {
+
+
+body {
   text-align: center;
+  background-image: url(https://static.wixstatic.com/media/038283_99861f89259047018a79ddcf82c853bf~mv2.jpg/v1/fill/w_894,h_894,al_c,q_90/038283_99861f89259047018a79ddcf82c853bf~mv2.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.name {
+  text-align: left;
+  font-size: 40px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.winRage {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-left: 30px;
+  font-size: 24px;
+  margin-top: 50px;
+  font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
+.header {
+  color: rgb(0, 0, 0);
+  font-size: 60px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#main {
+  background-color: rgba(168, 194, 243, 0.589);
+  display: flex;
+  margin-top: 80px;
+  margin-left: 15vw;
+  margin-right: 15vw;
+  justify-content: space-evenly;
+}
+
+.winButton {
+  border-radius: 50%;
+  height: 80px;
+  width: 80px;
+  font-size: 25px;
+  background-image: url(https://lh3.googleusercontent.com/proxy/Pv8EcnZm5J_Q54lEDMziQQkOLz3Es7ezH3QmefK3wZJis2hSTu1kdGpYapjKp-qaZPAlE0SqgAACnZfcgTTk7iSKTvt2cYmZQuORnXPAg9TlNhTbMStzK4lZUaeP_-m9yc5hkwyW1FXUp573LrYe2UBFx9k);
+  background-size: cover;
+  margin-top: 28px;
+  
+}
+
+.upDel {
+  display: flex;
+  margin-left: 80px;
+  border-radius: 10px;
+  background-color: rgb(136, 51, 68);
+  border: none;
+  height: 30px;
+  margin-top: 1.5rem;
+  font-weight: bold;
+}
+
+.rageInput {
+  height: 20px;
+  border-radius: 10px;
+  margin-top: 50px;
+  margin-left: 50px;
+  border: none;
+  background-color: rgb(194, 247, 247);
+}
+
+.crud {
+  border-radius: 10px;
+
+}
+
+.update {
+  background-color: white;
+  height: 20px
+}
+
+.btn:hover {
+  background-color: white;
 }
